update Composent.css and index.html

--- a/index.html
+++ b/index.html
@@ -200,16 +200,16 @@
                     </div>
                 </div>
 
-                <div>
+                <div class="Composoent_LevierButton">
                     <p id="PhraseSelection_Temps"></p>
-                    <div>
-                        <button data-days="1">1 Day</button>
-                        <button data-days="7">1 Week</button>
-                        <button data-days="182">6 Month</button>
-                        <button data-days="365">1 Year</button>
+                    <div class="Composent_Staking_Button">
+                        <button data-days="1" class="Composent_TradingButton_Selection_Staking"> 1Day</button>
+                        <button data-days="7" class="Composent_TradingButton_Selection_Staking">1 Week</button>
+                        <button data-days="182" class="Composent_TradingButton_Selection_Staking">6 Month</button>
+                        <button data-days="365" class="Composent_TradingButton_Selection_Staking">1 Year</button>
                     </div>
-                    <div>
-                        <input type="range" min="1" max="365" id="Input_RangeTemps" />
+                    <div class="Composent_Tranding_Range_General">
+                        <input type="range" min="1" max="365" id="Input_RangeTemps" class="Composent_Trading_Range" />
                         <span id="Temps_Value">1 </span>
                     </div>
                 </div>
