--- a/index.html
+++ b/index.html
@@ -355,11 +355,11 @@
 
                 <div>
                     <p id="PhraseSelection_Temps_Lending"></p>
-                    <div>
-                        <button data-days="1">1 Day</button>
-                        <button data-days="7">1 Week</button>
-                        <button data-days="182">6 Month</button>
-                        <button data-days="365">1 Year</button>
+                    <div class="Composent_Staking_Button">
+                        <button data-days="1" class="Composent_TradingButton_Selection_Staking">1 Day</button>
+                        <button data-days="7" class="Composent_TradingButton_Selection_Staking">1 Week</button>
+                        <button data-days="182" class="Composent_TradingButton_Selection_Staking">6 Month</button>
+                        <button data-days="365" class="Composent_TradingButton_Selection_Staking">1 Year</button>
                     </div>
                     <div>
                         <input type="range" min="1" max="365" id="Input_RangeTemps_Lending">
