--- a/index.html
+++ b/index.html
@@ -362,8 +362,9 @@
                         <button data-days="365" class="Composent_TradingButton_Selection_Staking">1 Year</button>
                     </div>
                     <div>
-                        <input type="range" min="1" max="365" id="Input_RangeTemps_Lending">
-                        <span id="Temps_Value_Lending">1</span>
+                        <input type="range" min="1" max="365" id="Input_RangeTemps_Lending"
+                            class="Composent_Tranding_Range_General">
+                        <span id="Temps_Value_Lending" class="Composent_Trading_Range">1</span>
                     </div>
                 </div>
 
