--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                     </div>
                 </div>
 
-                <div>
+                <div class="Composoent_LevierButton">
                     <p id="PhraseSelection_Temps_Lending"></p>
                     <div class="Composent_Staking_Button">
                         <button data-days="1" class="Composent_TradingButton_Selection_Staking">1 Day</button>
