--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@
                         <button data-days="182" class="Composent_TradingButton_Selection_Staking">6 Month</button>
                         <button data-days="365" class="Composent_TradingButton_Selection_Staking">1 Year</button>
                     </div>
-                    <div>
+                    <div class="Composent_Tranding_Range_General">
                         <input type="range" min="1" max="365" id="Input_RangeTemps_Lending"
-                            class="Composent_Tranding_Range_General">
-                        <span id="Temps_Value_Lending" class="Composent_Trading_Range">1</span>
+                            class="Composent_Trading_Range">
+                        <span id="Temps_Value_Lending">1</span>
                     </div>
                 </div>
 
