update Composent.css and index.html

--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
             <div id="Block_Levier" class="Composent_Generaux_Radio">
                 <form>
                     <div class="Composent_SpotLevier_Radio">
-                        <label class="Composent_Generaux_Text">
-                            <input class="RadioButton" type="radio" id="Input_Long" name="contact"
-                                value="Long">Long</label>
-                        <label class="Composent_Generaux_Text Composent_Generaux_Text_Short">
-                            <input class="RadioButtonS" type="radio" id="Input_Short" name="contact"
-                                value="Short">Short</label>
+                        <span class="Composent_Generaux_Text">Long</span>
+                        <input class="RadioButtonLongShort" type="radio" id="Input_Long" name="contact" checked>
+                        <input class="RadioButtonLongShort" type="radio" id="Input_Short" name="contact">
+                        <span class="Composent_Generaux_Text">Short</span>
                     </div>
                 </form>
+
+
             </div>
 
 
